--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-node_modules
+# Node modules
+node_modules/
+
+# TypeScript build output
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Test results and coverage
+coverage/
+*.test.ts.snap
+
+# Environment variables
+.env
