--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
 	"name": "arabic-services",
 	"version": "0.0.1",
 	"description": "Utility functions on Arabic text",
-	"main": "./src/index.js",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
-		"test": "mocha"
+		"build": "tsc",
+		"clean": "rimraf dist",
+		"test": "jest --coverage",
+		"prepublishOnly": "npm run build",
+		"lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
+		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
 	},
 	"repository": {
 		"type": "git",
@@ -32,6 +38,15 @@
 	},
 	"homepage": "https://github.com/Seen-Arabic/Arabic-Services-JavaScript#readme",
 	"devDependencies": {
-		"mocha": "^10.0.0"
+		"@types/jest": "^29.5.5",
+		"@typescript-eslint/eslint-plugin": "^6.7.5",
+		"@typescript-eslint/parser": "^6.7.5",
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"jest": "^29.7.0",
+		"prettier": "^3.0.3",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5.2.2"
 	}
 }
