--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"clean": "rimraf dist",
 		"test": "jest --coverage",
 		"prepublishOnly": "npm run build",
+		"format": "npx prettier --write . --ignore-path .gitignore",
 		"lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
 		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
 	},
