--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
 	"version": "1.0.0-rc.1",
 	"description": "Utility functions on Arabic text",
 	"main": "./dist/index.js",
+	"type": "module",
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
 		"clean": "rimraf dist",
-		"test": "jest --coverage",
+		"test": "jest --config jest.config.cjs --coverage",
 		"prepublishOnly": "npm run build",
 		"format": "npx prettier --write . --ignore-path .gitignore",
 		"lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
-		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
+		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+		"bundle": "webpack"
 	},
 	"repository": {
 		"type": "git",
@@ -48,6 +50,9 @@
 		"jest": "^29.7.0",
 		"prettier": "^3.0.3",
 		"ts-jest": "^29.1.1",
-		"typescript": "^5.2.2"
+		"ts-loader": "^9.5.0",
+		"typescript": "^5.2.2",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
