--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
 		"outDir": "./dist",
 		"esModuleInterop": true
 	},
-	"include": ["src/**/*.ts", "src/script.js"],
+	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "**/tests/*"]
 }
