--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
+		"dev": "ts-node src/index.ts",
 		"build": "tsc",
 		"clean": "rimraf dist",
 		"test": "jest --config jest.config.cjs --coverage",
